# kuma-claw

./: .dockerignore  .env.example  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.en.md  README.ja.md  README.md  README.zh.md  ROADMAP.md  SECURITY.md  cloudbuild.yaml  pyproject.toml  pytest.ini  requirements.txt  test_dynamic_agent.py  test_skills.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-bot.yml  ci.yml
docs/: BUGFIX_SUMMARY.md  CODE_REVIEW_REQUEST.md  CODE_REVIEW_SUMMARY.md  DEPLOYMENT.md  FINAL_REVIEW_REPORT.md  GATEWAY.md  INTEGRATION_GUIDE.md  MEMORY.md  QUICK_REFERENCE.md  README.md  SKILLS_DESIGN.md  SKILLS_README.md  SUMMARY.md
gateway/: __init__.py  agent_router.py  auth_manager.py  channel_manager.py  server.py  session_manager.py
kuma_claw/: __init__.py  agent.py  auth.py  cli.py  config.py  i18n.py  indexer.py  main.py  memory.py  service_registry.py  sessions.py  web_ui.py
kuma_claw/channels/: __init__.py  base.py  discord.py  slack.py  telegram.py  web.py  whatsapp.py
kuma_claw/gateway/: __init__.py  agent_runner.py  formats.py  session_manager.py
kuma_claw/gateway/adapters/: __init__.py  base.py  slack.py  telegram.py  web.py
kuma_claw/prompts/: __init__.py  identity.py  user.py
kuma_claw/skills/: skill_manager.py
kuma_claw/skills/skill-creator/: __init__.py  tools.py
kuma_claw/tools/: __init__.py  adk_google_workspace.py
skills/kuma-skills-system/references/example_weather_skill/: __init__.py  tools.py
skills/kuma-skills-system/scripts/: init_skill.py  skill_manager.py
skills/weather-skill/: skill.json  tools.py
tests/: __init__.py  conftest.py  test_agent.py  test_auth.py  test_channels.py  test_config.py  test_memory.py  test_sessions.py  test_skill_manager.py  test_web_ui.py
